cmake_minimum_required(VERSION 3.15)
project(Cpp_class)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cpp_class main.cpp BasicCourse.h ChristmasTree.cpp ChristmasTree.h Triangle.cpp Triangle.h Cylinder.cpp Cylinder.h BackDate.cpp BackDate.h TimeLag.cpp TimeLag.h Cards.cpp Cards.h Card.cpp Card.h Geometry.cpp Geometry.h SolidGeometry.cpp SolidGeometry.h PlaneGeometry.cpp PlaneGeometry.h)